--- a/web/css/userstyle.css
+++ b/web/css/userstyle.css
@@ -21,6 +21,8 @@ body{
 }
 
 .wrapper{
+  padding-top: 20px;
+  padding-bottom: 20px;
   display: flex;
   position: relative;
 }
@@ -28,9 +30,6 @@ body{
 .wrapper .sidebar{
   width: 250px;
   height: 100%;
-  background: #f3f5f9;
-  padding: 30px 0px;
-  position: fixed;
 }
 
 .wrapper .sidebar h2{
@@ -66,9 +65,6 @@ body{
 
 .wrapper .my_details{
   width: 100%;
-  margin-top: 80px;
-  margin-bottom: 300px;
-  margin-left: 300px;
   background: #fff;
   color: #000000;
   padding: 30px;
