order page updated

--- a/web/css/userstyle.css
+++ b/web/css/userstyle.css
@@ -171,10 +171,7 @@ body{
 
 .wrapper .my_orders{
   width: 100%;
-  margin-top: 80px;
-  margin-bottom: 300px;
-  margin-left: 300px;
-  background: #fff;
+  background: #ffffff;
   color: #000000;
   padding: 30px;
   line-height: 25px;
